feat: expand `sample.env` with detailed configuration options and add `REMOVE_ENV_FROM_GIT.md` for secure environment variable handling.

--- a/sample.env
+++ b/sample.env
@@ -1,25 +1,67 @@
-# ____REMOVE THIS LINE AFTER RENAMING sample.env to .env ____
+# ====================================================================
+# PGWIZ-MD Environment Configuration Template
+# ====================================================================
+# INSTRUCTIONS:
+# 1. Copy this file: cp sample.env .env
+# 2. Fill in your actual values below
+# 3. NEVER commit .env to GitHub (it's in .gitignore)
+# ====================================================================
 
-# PUT YOUR SESSION ID BELOW
+# ============ AUTHENTICATION ============
+
+# Your bot session ID from pairing service
 SESSION_ID=""
 
-# PUT YOUR REMOVE BACKGROUND API KEY BELOW
-REMOVEBG_KEY=""
+# Phone number for pairing code (without + or spaces)
+# Example: 254789462334
+PAIRING_NUMBER=""
 
+# ============ DATABASE (Choose ONE) ============
+
+# SQLite (Default - Good for small deployments)
+DB_URL="./baileys_store.db"
+
+# MongoDB (Recommended for production - Unlimited storage)
+# MONGO_URL="mongodb+srv://user:pass@cluster.mongodb.net/dbname"
+
+# PostgreSQL (Recommended for production - Unlimited storage)
+# POSTGRES_URL="postgresql://user:pass@host:5432/dbname"
+
+# MySQL (Alternative for production - Unlimited storage)
+# MYSQL_URL="mysql://user:pass@host:3306/dbname"
+
+# ============ SERVER ============
+
+# HTTP server port
 PORT="5000"
 
-# If you don't have session id and want pairing code for connection 
-PAIRING_NUMBER =""
+# ============ AUTO STATUS ============
 
-# Use One Of Following:
+# Automatically view all WhatsApp statuses (true/false)
+AUTO_STATUS_VIEW="false"
 
-MONGO_URL="mongodb://localhost:27017/whatsapp"
+# Automatically react to all WhatsApp statuses (true/false)
+AUTO_STATUS_REACT="false"
 
-POSTGRES_URL="postgresql://user:pass@localhost/whatsapp"
-
-MYSQL_URL="mysql://user:pass@localhost/whatsapp"
-
-DB_URL="./baileys_store.db"  # SQLite path
-
-# Status reaction emoji(s) - single or comma-separated for random selection
+# Emojis for status reactions (comma-separated for random selection)
 STATUS_EMOJIS="💚,❤️,🔥,😍,👏"
+
+# ============ SUDO USERS ============
+
+# Comma-separated phone numbers with elevated privileges (without + or spaces)
+# Example: SUDO_USERS="254789462334,1234567890"
+SUDO_USERS=""
+
+# ============ API KEYS ============
+
+# Remove.bg API key for background removal
+REMOVEBG_KEY=""
+
+# ====================================================================
+# IMPORTANT SECURITY NOTES:
+# - NEVER share your .env file
+# - NEVER commit .env to GitHub
+# - Keep your SESSION_ID private
+# - Rotate API keys regularly
+# ====================================================================
+
